--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*fonts
+1. h1 + h2: Dosis
+2. body text: Quicksand
+3. buttons + nav: Roboto condensed
+*/
+
 * {
   box-sizing: border-box;
 }
@@ -7,6 +13,12 @@ body{
   background-color: #222222;
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#project-content{ /*a wrapper with all the page content in it */
+  padding-top: 5rem; /* move content below so there's more spacing between header and top of the intro */
 }
 
 footer {
@@ -20,30 +32,35 @@ footer {
   margin-right: 14%;
 }
 
-footer h2{
-  border-bottom: 5px solid #C22022;
-  width: 100%;
-}
-
 section {
   margin-left: 14%;
   margin-right: 14%;
-  margin-top: 5rem;
 }
 
 /* ----------------------- BASIC ELEMENT Related ---------------------------*/
 
 h1 {
+  font-family: 'Dosis', serif;
+  justify-self: left;
+	position: relative;
   font-size: 48px;
   color: white;
   margin-top: 2rem;
-  border-image: 
-    linear-gradient(0deg,
-      #C22022 5px,
-    #0000 0) fill 0//0 0 0 100vw;
   width: fit-content;
 }
+
+h1:after {
+	position: absolute;
+	content: "";
+	height: 5px;
+	width: 100vw;
+  bottom: -0.3rem; /* move the line lower */
+	right: 0;
+	background-color: #C22022;
+}
+
 h2 {
+  font-family: 'Dosis', serif;
   font-size: 36px;
   margin-top: 0;
 }
@@ -124,14 +141,24 @@ input[type="text"] {
   text-decoration: none;
   background-color: #023E7D;
   border-radius: 0.7rem;
-  color: #white;
+  color: white;
   cursor: pointer;
   width: 2rem;
   padding: 0.2rem;
   margin-right: 0.2rem;
 }
 
-.navigation {
+
+/* ----------------------- NAVIGATION BAR Related ---------------------------*/
+
+#navigation-wrapper {
+  position: fixed; /* Make the navigation stick to the top */
+  top: 0; /* same as last line */
+  width: 100%;
+  z-index: 1;
+}
+#navigation {
+  overflow: hidden;
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-areas:
@@ -139,19 +166,12 @@ input[type="text"] {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 2rem;
-}
-
-@media only screen and (max-width: 768px) {
-  .navigation {
-    grid-template-columns: 1fr;
-    grid-template-areas:
-  "logo"
-  "links";
-  }
+  margin-bottom: 1rem;
 }
 
 #logo {
   grid-area: logo;
+  margin-bottom: 0;
 }
 
 .navigation-items {
@@ -173,10 +193,61 @@ input[type="text"] {
   cursor: pointer;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  #navigation {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+  "logo"
+  "links";
+  }
+  #logo{ /* centre the logo when the screen width is small */
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+  }
+
+  .navigation-items{
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* ----------------------- SIDE BAR Related ---------------------------*/
+#side-bar {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 3%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  top: 12%; /* Stay at the top */
+  right: 1rem;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  margin-right: 3rem;
+}
+
+.side-bar-line{
+  border-left: 3px solid #C22022;
+  margin-left: 1.1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  height: 23%;
+}
+
+#side-bar a{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+
 /* ----------------------- INTRODUCTION SECTION SPECIFIC ---------------------------*/
 #introduction {
   display: grid;
   grid-template-columns: 60% 40%;
+  margin-top: 5rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -195,7 +266,7 @@ input[type="text"] {
 
 /* ----------------------- PROJECT SECTION SPECIFIC ---------------------------*/
 .project {
-  background-color: #3B414D;
+  background-color: #2C2C2C;
   border-radius: 1rem;
   display: grid;
   grid-template-columns: 40% 60%;
@@ -213,11 +284,19 @@ input[type="text"] {
   margin-left: 1rem;
 }
 
-.project h2{
+.project-right button {
+  margin-right: 0rem;
+  float: right;
+}
+
+.project h2 {
   margin-bottom: 0;
 }
+
 .project img{
   width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .project-title {
@@ -228,6 +307,33 @@ input[type="text"] {
 
 .project-title p{
   margin-left: auto;
+  margin-bottom: 0;
+}
+
+/* ----------------------- FOOTER SECTION SPECIFIC ---------------------------*/
+#footer-divider {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+#footer-content {
+  position: relative;
+}
+
+#footer-content h2 {
+  position: relative;
+  z-index: 0;
+}
+
+#footer-content h2::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1rem;
+  width: 100%;
+  background: #C22022;
+  z-index: -1;
 }
 
 /* ----------------------- Project page specific ---------------------------*/
@@ -267,12 +373,81 @@ input[type="text"] {
 }
 
 /* ----------------------- IMAGES ---------------------------*/
-#profile-picture {
- 
+.social-logo {
+  margin-right: 2rem;
+  width: 2rem;
+  height: 2rem;
 }
+
+#side-bar-logo-list .social-logo {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+#linkedin-logo {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/linkedin.png');
+  background-size: cover;
+}
+
+#linkedin-logo:hover{
+  background-image: url('resources/linkedin_hovered.png');
+}
+
+#linkedin-logo-side {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/linkedin_logo_side.png');
+  background-size: cover;
+}
+
+#linkedin-logo-side:hover {
+  background-image: url('resources/linkedin_logo_side_hovered.png');
+}
+
+#instagram-logo {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/instagram.png');
+  background-size: cover;
+}
+
+#instagram-logo:hover{
+  background-image: url('resources/instagram_hovered.png');
+}
+
+#instagram-logo-side {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/instagram_logo_side.png');
+  background-size: cover;
+}
+
+#instagram-logo-side:hover {
+  background-image: url('resources/instagram_logo_side_hovered.png');
+}
+
+#facebook-logo {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/facebook.png');
+  background-size: cover;
+}
+
+#facebook-logo:hover {
+  background-image: url('resources/facebook_hovered.png');
+}
+
+#facebook-logo-side {
+  display: inline-block; /* make sure there's room for the element for pic to show up */
+  background-image: url('resources/facebook_logo_side.png');
+  background-size: cover;
+}
+
+#facebook-logo-side:hover {
+  background-image: url('resources/facebook_logo_side_hovered.png');
+}
+
 /* ----------------------- STYLE GUIDE Related ---------------------------*/
+.area img{
+  width: 80%;
+}
 #style-guide-header {
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
 }
