--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h1 {
   font-family: 'Dosis', serif;
   justify-self: left;
 	position: relative;
-  font-size: 48px;
+  font-size: 36px;
   letter-spacing: -0.98px; /*calculated via chatgpt */
   line-height: 1.08;
   color: white;
@@ -108,7 +108,7 @@ h1:after {
 
 h2 {
   font-family: 'Dosis', serif;
-  font-size: 36px;
+  font-size: 28px;
   letter-spacing: -0.4px;
   line-height: 1.1;
   margin-top: 0;
@@ -117,7 +117,7 @@ h2 {
 
 h3 {
   font-family: 'Dosis', serif;
-  font-size: 32px; 
+  font-size: 28px; 
   margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -136,7 +136,7 @@ ul {
 
 p, label, li{
   width: 97%;
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: -0.2px;
   line-height: 1.3;
   font-family: 'Quicksand';
@@ -257,7 +257,6 @@ input[type="text"] {
   color:#C22022;
   margin-right: 0.5rem;
 }
-
 /* ----------------------- NAVIGATION BAR Related ---------------------------*/
 
 #navigation-wrapper {
@@ -497,14 +496,14 @@ input[type="text"] {
   width: 100%;
 }
 
-#project-members ul{
+.list ul{
   list-style-type: none;
   padding: 0 0 0 0.5rem;
-  width: 100%;
+  width: 80%;
 }
 
-#project-members li{
-  margin-bottom: 0.5rem;
+.list li{
+  margin-bottom: 1rem;
 }
 
 .highlight-area-title {
@@ -654,6 +653,39 @@ input[type="text"] {
   grid-template-columns: 1.1fr 1fr;
   align-items: top;
   margin-bottom: 1.5rem;
+}
+
+/* ----------------------- PROJECT PAGE - CRAFTCONNECT SPECIFIC ---------------------------*/
+#craftconnect-overview-screens {
+  gap: 2rem;
+  align-items: flex-start;
+}
+
+#craftconnect-initial-problem-framing{
+  text-align: center;
+}
+
+#craftconnect-initial-ideas{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: top;
+  gap: 3rem;
+}
+
+.craftconnect-feature {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: top;
+  gap: 3rem;
+}
+
+#craftconnect-interactable-object-list {
+  width: 70%;
+}
+
+#craftconnect-final-concept-result p{
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 /* ----------------------- MEDIA (IMAGE + VIDEO) ---------------------------*/
@@ -880,6 +912,19 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/*----------- CRAFTCONNECT -----------*/
+#craftconnect-shelf {
+  width: 20%;
+  margin-left: 10rem;
+  margin-right: 5rem;
+}
+
+.craftconnect-feature-video video{
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* ----------------------- STYLE GUIDE Related ---------------------------*/
