--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ footer {
   background-color: #1F1F1F;
   margin-top: 5rem;
   padding-top: 1rem;
+  padding-bottom:1rem;
 }
 
 #footer-content {
@@ -53,8 +54,8 @@ section {
   margin-right: -19.5%;
   padding-left: 19.5%;
   padding-right: 19.5%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   background-color: #2C2C2C;
 }
 
@@ -62,6 +63,29 @@ section {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.flex-area{ /* for the list of items within the project brief for each project page */
+  display: flex;
+  justify-content: space-between;
+}
+
+.grid-area{
+  display: grid;
+  grid-template-columns: 1fr 1fr; /*overwrite in specific elements, this is the default */
+  gap: 3rem;
+}
+
+@media only screen and (max-width: 768px) { /* for a smaller screen */
+  .flex-area {
+    display: block; 
+  }
+  
+  .grid-area{
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
 }
 
 @media (min-width: 1600px) {  /*for a larger screen */
@@ -79,7 +103,6 @@ section {
     padding-left: 33.5%;
     padding-right: 33.5%;
   }
-
 }
 
 /* ----------------------- BASIC ELEMENT Related ---------------------------*/
@@ -89,19 +112,22 @@ h1 {
   justify-self: left;
 	position: relative;
   font-size: 36px;
-  letter-spacing: -0.98px; /*calculated via chatgpt */
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.36px;; /*calculated via chatgpt */
   line-height: 1.08;
   color: white;
   margin-top: 2rem;
+  margin-bottom: 1.5rem;
   width: fit-content;
 }
 
 h1:after {
 	position: absolute;
 	content: "";
-	height: 5px;
+	height: 3px;
 	width: 100vw;
-  bottom: -0.3rem; /* move the line lower */
+  bottom: -0.1rem; /* move the line lower */
 	right: 0;
 	background-color: #C22022;
 }
@@ -109,41 +135,51 @@ h1:after {
 h2 {
   font-family: 'Dosis', serif;
   font-size: 28px;
-  letter-spacing: -0.4px;
-  line-height: 1.1;
+  font-weight: 400;
+  letter-spacing: -0.52px;
+  line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 h3 {
   font-family: 'Dosis', serif;
-  font-size: 28px; 
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-h4 {
-  width: 70%;
-  font-family: 'Dosis', serif;
-  font-size: 24px;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  font-size: 16px; 
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #626262;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.15px; /* 1% of 15px */
+  margin-top: 0rem;
+  margin-bottom: 0.25rem;
 }
 
 ul {
   margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+  padding: 0;
+  width: 120%;
 }
 
 p, label, li{
   width: 97%;
   font-size: 16px;
+  font-weight: 400;
   letter-spacing: -0.2px;
-  line-height: 1.3;
+  line-height: 1.4;
+  margin-top: 0;
+  margin-bottom: 0;
   font-family: 'Quicksand';
 }
 
-li{
-  margin-bottom: 0.5rem;
+/* paragraph breaks */
+p + p {
+  margin-top: 1rem;
+}
+
+li + li {
+  margin-top: 0.25rem;
 }
 
 strong{
@@ -154,9 +190,10 @@ strong{
 
 figcaption{
   width: 97%;
-  margin: 0;
+  color: #B6B6B6;
+  margin-left: 0.5rem;
   padding: 0;
-  font-size: 16px;
+  font-size: 14px;
   letter-spacing: -0.2px;
   line-height: 1.3;
   font-family: 'Quicksand';
@@ -215,6 +252,7 @@ input[type="text"] {
 }
 
 @media only screen and (max-width: 768px) {
+  /*
   h1 {
     font-size: 36px;
   }
@@ -233,6 +271,7 @@ input[type="text"] {
   figcaption {
     font-size: 12px;
   }
+    */
 }
 
 /* ----------------------- CUSTOM BASIC ELEMENT Related ---------------------------*/
@@ -253,9 +292,25 @@ input[type="text"] {
   font-family: 'Dosis', serif;
   font-size: 38px;
   letter-spacing: -0.4px;
-  line-height: 1.1;
+  line-height: 0.8;
   color:#C22022;
   margin-right: 0.5rem;
+}
+
+.center-heading-with-line {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+
+.center-heading-with-line::after {
+  content: '';
+  position: absolute;
+  bottom: -0.3em;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 25%; /* 1/5 of the heading width */
+  border-bottom: 2px solid #c22022;
 }
 /* ----------------------- NAVIGATION BAR Related ---------------------------*/
 
@@ -279,6 +334,11 @@ input[type="text"] {
 
 #logo {
   grid-area: logo;
+}
+
+#logo a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .navigation-items {
@@ -335,13 +395,20 @@ input[type="text"] {
 /* ----------------------- SIDE BAR Related ---------------------------*/
 #side-bar {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 3%; /* Set the width of the sidebar */
+  width: 4%; /* Set the width of the sidebar */
   min-width: 50px;
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   top: 12%; /* Stay at the top */
   right: 1rem;
   overflow-x: hidden; /* Disable horizontal scroll */
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   margin-right: 3rem;
+}
+
+#side-bar-logo-list {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 @media screen and (max-width: 1024px) {
@@ -359,8 +426,6 @@ input[type="text"] {
 .side-bar-line{
   border-left: 3px solid #C22022;
   margin-left: 1.1rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
   height: 23%;
 }
 
@@ -486,24 +551,35 @@ input[type="text"] {
   margin-bottom: 3rem;
 }
 
-#project-page-brief {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 3rem;
+.project-brief-element + .project-brief-element {
+  margin-top: 1.5rem;
 }
 
-#project-page-brief h4{
-  width: 100%;
+#project-page-brief h3 {
+  display: flex;
+  align-items: flex-end;
 }
 
-.list ul{
-  list-style-type: none;
-  padding: 0 0 0 0.5rem;
-  width: 80%;
+#project-page-brief h3 span {
+  white-space: nowrap;
 }
 
-.list li{
-  margin-bottom: 1rem;
+#project-page-brief h3::after {
+  content: "";
+  flex-grow: 1;
+  height: 1px;
+  background-color: #C22022;
+  margin-left: 0.5rem; 
+  margin-bottom: 0.2rem;
+}
+
+.project-brief-element-list{
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+}
+
+.project-brief-element-list p{
+  margin: 0;
 }
 
 .highlight-area-title {
@@ -514,21 +590,6 @@ input[type="text"] {
 @media only screen and (max-width: 768px) {
   #project-page-brief {
     grid-template-columns: 1fr;
-  }
-}
-
-#project-page-brief h3, #project-page-brief h4 {
-   border-bottom: 3px solid #C22022;
-}
-
-.flex-area{ /* for the list of items within the project brief for each project page */
-  display: flex;
-  justify-content: space-between;
-}
-
-@media only screen and (max-width: 768px)  { 
-  .flex-area {
-    display: block; 
   }
 }
 
@@ -543,56 +604,36 @@ input[type="text"] {
 }
 
 #rabbitats-share-prototype{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   justify-content: center; 
   align-items: center;
   text-align: center;
 }
 
 @media only screen and (max-width: 768px)  { 
-  #rabbitats-share-prototype{
-    grid-template-columns: 1fr;
-  }
   .rabbitats-share-prototype-option{
     margin-bottom: 2rem;
   }
 }
 
 #rabbitats-first-issue-top{
-  display: grid;
-  grid-template-columns: auto 1fr 1fr;
-  gap: 1rem; 
   align-items: start; 
 }
 
 #rabbitats-first-issue-bottom{
-  display: grid;
   grid-template-columns: 2fr 1fr;
   align-items: flex-end;
-  gap: 3rem;
   margin-top: -1.5rem;
 }
 
 
 #rabbitats-second-issue{
-  display: grid;
   grid-template-columns: 1fr 1.3fr;
-  gap: 3rem; 
   align-items: center;
 }
 
 #rabbitats-second-issue-content {
-  display: grid;
   grid-template-columns: auto 1fr;
   gap: 1rem;
-}
-
-@media only screen and (max-width: 768px)  { 
-  #rabbitats-first-issue-top, #rabbitats-first-issue-bottom, #rabbitats-second-issue, #rabbitats-second-issue-content  {
-    grid-template-columns: 1fr;
-  }
-  
 }
 
 #rabbitats-design-iterations-images { /*center all the images for the design iterations section */
@@ -602,60 +643,57 @@ input[type="text"] {
   text-align: center;
 }
 
+#rabbitats-design-iterations-images figcaption {
+  text-align: left;
+}
+
 /* ----------------------- PROJECT PAGE - MACARON SPECIFIC ---------------------------*/
 
 #macaron-share-prototype{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   justify-content: center; 
   align-items: center;
   text-align: center;
 }
 
 #macaron-brand-description{
-  display: grid;
   grid-template-columns: 1.5fr 1fr;
   justify-content: center; 
   align-items: center;
-  gap: 3rem;  
 }
 
 #macaron-first-role{
-  display: grid;
   grid-template-columns: 1.3fr 1fr;
-  gap: 3rem; 
   align-items: center;
 }
 
 #macaron-first-role-content, #macaron-second-role, #macaron-third-role-content {
-  display: grid;
   grid-template-columns: auto 1fr;
   gap: 1rem; 
   align-items: start; 
 }
 
 #macaron-second-role-bottom{
-  display: grid;
   grid-template-columns: 1fr 1.5fr;
-  gap: 3rem;
   align-items: top;
 }
 
 #macaron-third-role{
-  display: grid;
   grid-template-columns: 1fr 1.5fr;
-  gap: 3rem;
   align-items: top;
 }
 
 .macaron-features{
-  display: grid;
   grid-template-columns: 1.1fr 1fr;
   align-items: top;
   margin-bottom: 1.5rem;
 }
 
 /* ----------------------- PROJECT PAGE - CRAFTCONNECT SPECIFIC ---------------------------*/
+#craftconnect-topic-context {
+  grid-template-columns: 2fr 1fr;
+  align-items: center;
+}
+
 #craftconnect-overview-screens {
   gap: 2rem;
   align-items: flex-start;
@@ -666,17 +704,11 @@ input[type="text"] {
 }
 
 #craftconnect-initial-ideas{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   align-items: top;
-  gap: 3rem;
 }
 
 .craftconnect-feature {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: top;
-  gap: 3rem;
+  align-items: center;
 }
 
 #craftconnect-interactable-object-list {
@@ -688,6 +720,37 @@ input[type="text"] {
   margin-right: 2rem;
 }
 
+/* ----------------------- PROJECT PAGE - CLOSETSHARE SPECIFIC ---------------------------*/
+#closetshare-showcase-video{
+  text-align: center;
+}
+
+/* mobiles */
+@media only screen and (max-width: 768px) {
+  /* --- RABBITATS --- */
+  #rabbitats-share-prototype,
+  #rabbitats-first-issue-top,
+  #rabbitats-first-issue-bottom,
+  #rabbitats-second-issue,
+  #rabbitats-second-issue-content,
+
+  /* --- MACARON --- */
+  #macaron-brand-description,
+  #macaron-first-role,
+  #macaron-first-role-content,
+  #macaron-second-role,
+  #macaron-second-role-bottom,
+  #macaron-third-role,
+  #macaron-third-role-content,
+  .macaron-features,
+
+  /* --- CRAFTCONNECT --- */
+  #craftconnect-topic-context {
+    display: grid;
+    grid-template-columns: 1fr !important;
+  }
+}
+
 /* ----------------------- MEDIA (IMAGE + VIDEO) ---------------------------*/
 
 /* ----------- GENERAL -----------*/
@@ -696,19 +759,25 @@ img {
 }
 
 .image-with-frame { /*add lighter grey area around image for content */
+  align-self: flex-start;
   padding: 0.8rem;
   background-color: #2C2C2C;
   border-radius: 0.5rem;
+  margin-top: 1rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
 .image-with-caption { /*add lighter grey area around image for content */
+  align-self: flex-start;
   padding: 0.8rem;
   background-color: #2C2C2C;
   border-radius: 0.5rem;
   display: inline-block; 
-  text-align: center; 
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Drop shadow */
+}
+
+p + .image-with-caption, p + .image-with-frame {
+  margin-top: 1rem;
 }
 
 .image-with-caption figcaption {
@@ -830,13 +899,6 @@ img {
   width: 25%;
 }
 
-#rabbitats-design-sketches, #rabbitats-wireframe, #rabbitats-prototype-iterations{
-  width: 100%;
-}
-
-#rabbitats-design-cketches-container, #rabbitats-prototype-iterations-container{
-  width: 90%;
-}
 
 #rabbitats-news-article-container{
   margin-right: 2rem;
@@ -855,12 +917,18 @@ img {
 }
 
 
+
+
 #rabbitats-improvement-A{
   width: 100%;
 }
 
 #rabbitats-improvement-B{
  width: 100%;
+}
+
+#rabbitats-improvement-B p {
+  margin-top: 1rem;
 }
 
 @media only screen and (max-width: 768px)  { 
@@ -916,9 +984,8 @@ img {
 
 /*----------- CRAFTCONNECT -----------*/
 #craftconnect-shelf {
-  width: 20%;
-  margin-left: 10rem;
-  margin-right: 5rem;
+  height: 100%;
+
 }
 
 .craftconnect-feature-video video{
